--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   location: ^5.0.3
   flutter_polyline_points:
+  permission_handler: ^10.4.3
 
 dev_dependencies:
   flutter_test:
